<resources>
    <string name="app_name">ECommerce</string>
    <string name="activity_login_title">Login.</string>
    <string name="activity_login_subtitle">Enter your email and password.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="cd_image_sign_up">Sign up here!</string>
    <string name="activity_register_title">Register.</string>
    <string name="activity_register_subtitle">Complete the fields.</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="number_phone">Number phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="err_empty_fields">The fields are empty.</string>
    <string name="err_invalid_email">Insert an email valid</string>
    <string name="err_different_passwords">Passwords don\'t match</string>
    <string name="err_register_new_user">An error was happened in the register process.</string>
    <string name="err_incorrect_password">The password is incorrect. Check that everything is OK.</string>
    <string name="err_incorrect_inputs">The data are incorrect. Check that everything is OK.</string>
    <string name="err_an_error_was_happened">An error was happened. Try again. If it still fails, try again later.</string>
    <string name="activity_client_title">Client Home</string>
    <string name="logout">Logout</string>
    <string name="select_a_role">Select A Role</string>
    <string name="cd_image_role_item">The icon of the role</string>
    <string name="delivery_home">Delivery Home</string>
    <string name="restaurant_home">Restaurant Home</string>
    <string name="upload_profile_photo">Upload a profile picture</string>
    <string name="confirm">Confirm</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="err_missing_image">Choose an image to upload on your profile</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit profile</string>
    <string name="cd_image_btn_edit_profile">Edit profile.</string>
    <string name="update">Update</string>
    <string name="activity_client_update_title">Update.</string>
    <string name="activity_client_update_subtitle">Update your information.</string>
    <string name="user_info_updated">User information updated successfully</string>
    <string name="err_missing_permissions">Permissions are required to perform this action</string>
    <string name="cd_image_category">Image of the category.</string>
    <string name="category_name">Categories\' name</string>
    <string name="save_category">Save category</string>
    <string name="category_created_successfully">The category was created successfully!</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="product_price">Product price</string>
    <string name="save_product">Save product</string>
    <string name="err_at_least_one_image_is_required">It\'s necessary to load three images to save a product</string>
    <string name="product_was_created_successfully">Product was created successfully</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet mi laoreet, volutpat urna sit amet, efficitur ex. In convallis sit amet lectus eu fermentum. Etiam rutrum, odio ut sodales congue, massa enim euismod libero, et varius massa dui ut nunc. Aliquam erat volutpat. Vivamus ultricies nulla nec erat sodales, at suscipit odio euismod. Integer lacinia eu quam ac aliquet.</string>
    <string name="cd_image_add_product">Add product to my shop list.</string>
    <string name="cd_image_remove_product">Remove product from my shop list.</string>
    <string name="add_product">Add product</string>
    <string name="product_added">Product added.</string>
    <string name="description">Description</string>
    <string name="cd_image_delete_shop">Delete this shop.</string>
    <string name="cd_image_shop">Shop image.</string>
    <string name="next">Next</string>
    <string name="total">Total:</string>
    <string name="your_shopping_list">Your shopping list</string>
    <string name="activity_client_address_create_title">Create a new address</string>
    <string name="activity_client_address_create_subtitle">Complete the form to add a new direction in your profile</string>
    <string name="direction">Direction</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="point_reference">Point reference</string>
    <string name="create_address">Create address</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="address_list_activity_title">Your addresses</string>
    <string name="address_list_activity_subtitle">Choose where do you want receive your shopping.</string>
    <string name="address_create_activity_title">Create</string>
    <string name="address_map_activity_title">Search a location.</string>
    <string name="accept">Accept</string>
    <string name="err_location_permission_is_required">Location permission is required to display the map.</string>
    <string name="settings">Settings</string>
    <string name="err_unidentified_user">Unidentified user</string>
    <string name="err_coordinates_invalids">The coordinates are invalids.</string>
    <string name="address_was_created_successfully">Address was created successfully</string>
    <string name="err_internet_connection">Verify your internet connection and try again</string>
    <string name="cd_image_check_address_item">Send to this address.</string>
    <string name="select_an_address_to_continue">Select an address to continue</string>
    <string name="order">Order</string>
    <string name="date_of_order">Date of order:</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="quantity">Quantity:</string>
    <string name="track_order">Track order</string>
    <string name="status">Status:</string>
    <string name="client">Client:</string>
    <string name="assign_a_delivery_man">Assign a delivery man</string>
    <string name="deliveries">Deliveries</string>
    <string name="dispatcher_assigned_successfully">Delivery was assigned successfully</string>
    <string name="err_delivery_can_not_be_assigned">This delivery can\'t be assigned to this order</string>
    <string name="dispatcher">Dispatcher:</string>
    <string name="start_trip">Start trip</string>
    <string name="order_started">Order has been started.</string>
    <string name="back_to_the_map">Back to the map</string>
    <string name="address">Address</string>
</resources>