<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clientUpdateActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.client.update.ClientUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/activity_client_update_title"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/activity_client_update_subtitle"
            android:textAppearance="?attr/textAppearanceBody1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_updateProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_person"
            app:civ_border_color="?attr/colorOnSurface"
            app:civ_border_width="4dp"
            app:civ_circle_background_color="?attr/colorSecondary" />

        <EditText
            android:id="@+id/input_updateName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="Aaron" />

        <EditText
            android:id="@+id/input_updateLastname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="Calixto" />

        <EditText
            android:id="@+id/input_updatePhone"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:autofillHints="phone"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/number_phone"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="+52 999 192 5195" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/update"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textColor="?attr/colorSecondary"
            app:cornerRadius="16dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>