<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/activity_login_description"
            android:textAppearance="?attr/textAppearanceBody1" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="aaron.calixto@outlook.com" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/sign_in"
            android:textColor="?attr/colorOnSecondary"
            app:cornerRadius="16dp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cd_image_sign_up"
            android:src="@drawable/ic_arrow_forward_ios"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sign_up_here"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceOverline" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>