<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurantCategoryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.restaurant.RestaurantCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_category"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/cd_image_category"
            android:src="@drawable/ic_image" />

        <EditText
            android:id="@+id/input_categoryName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text_login"
            android:hint="@string/category_name"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary"
            tools:text="" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_saveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/save_category"
        app:cornerRadius="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>