<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/saveImageActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SaveImageActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="?attr/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/upload_profile_photo"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnPrimary" />

    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_selectProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_person"
        app:civ_border_color="?attr/colorSurface"
        app:civ_border_width="5dp"
        app:civ_circle_background_color="?attr/colorSurface" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_saveImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skipProfilePicture"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/skip_this_step"
            app:cornerRadius="24dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>