<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_productShopItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/cd_image_shop"
        tools:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/nameShopItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?attr/colorPrimary"
                tools:text="Product's name" />

            <ImageView
                android:id="@+id/img_deleteShopItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:contentDescription="@string/cd_image_delete_shop"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_anchor="@id/btn_saveProductInMyList"
            app:layout_anchorGravity="top">

            <ImageView
                android:id="@+id/img_addShopItem"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:contentDescription="@string/cd_image_add_product"
                android:src="@drawable/ic_add_circle"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/quantityShopItem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="?attr/textAppearanceCaption"
                tools:text="5" />

            <ImageView
                android:id="@+id/img_removeShopItem"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/cd_image_remove_product"
                android:src="@drawable/ic_remove_circle"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/priceShopItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textStyle="bold"
                tools:text="$ 1,000,000.00" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>